se modificaron las imagenes, se agrego botones y se les agrego css

--- a/pages/piedra-papel-tijera.html
+++ b/pages/piedra-papel-tijera.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,28 @@
     <link rel="stylesheet" href="../css/main.css">
     <title>piedra-papel-tijera</title>
 </head>
+
 <body>
     <!--id particles.js-->
     <div id="particles-js"></div>
     <main>
-        <div class="container-img">
-            <img src="../imagenes/piedra.jpg" alt="piedra">
-            <img src="../imagenes/papel.jpg" alt="papel">
-            <img src="../imagenes/tijera.jpg" alt="tijera">
-        </div>
-        <div class="container-img-dos">
-            <img src="../imagenes/piedra.jpg" alt="piedra">
-            <img src="../imagenes/papel.jpg" alt="papel">
-            <img src="../imagenes/tijera.jpg" alt="tijera">
-        </div>
+        <div class="container">
 
+            <div class="group-btn-uno">
+                <button type="button" id="piedra"><img src="../imagenes/piedra.png" alt="piedra"></button>
+                <button type="button" id="papel"><img src="../imagenes/papel.png" alt="papel"></button>
+                <button type="button" id="tijera"><img src="../imagenes/tijera.png" alt="tijera"></button>
+            </div>
+            <div class="group-btn-dos">
+                <button type="button" id="piedra"><img src="../imagenes/piedra.png" alt="piedra"></button>
+                <button type="button" id="papel"><img src="../imagenes/papel.png" alt="papel"></button>
+                <button type="button" id="tijera"><img src="../imagenes/tijera.png" alt="tijera"></button>
+            </div>
     </main>
 
     <!--JS Particles.js-->
     <script src="../librerias/particles.min.js"></script>
     <script src="../librerias/particles.js"></script>
 </body>
+
 </html>
